# mvp_diplom

./: .gitignore  AGENTS.md  LICENSE  README.md  glava2.md  instruction.md  old_model.txt  package-lock.json  start.md  Диплом.docx  Диплом.docx.bak  Развёрнутый план ВКР.docx
server/: README.md  pyproject.toml
server/api/: auth.py  main.py  tasks.py
server/modeling/: __init__.py  distributions.py  schemas.py  simulator.py  storage.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css  types.ts
ui/src/api/: client.ts
ui/src/components/: DismissibleError.tsx
ui/src/model/: defaultModel.ts
ui/src/pages/: EditorPage.tsx  LoginPage.tsx  ModelsPage.tsx  ResultsPage.tsx
