[project]
name = "server"
version = "0.1.0"
description = "Discrete event simulation backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "pyjwt>=2.10.1",
  "pydantic>=2.12.3",
  "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["api"]